--- a/Abstract Factory/Abstract Factory/Abstract Factory.csproj
+++ b/Abstract Factory/Abstract Factory/Abstract Factory.csproj
@@ -43,6 +43,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Cheese\Cheese Products\CheddarConcreteProduct.cs" />
+    <Compile Include="Cheese\CheeseConcreteFactory.cs" />
+    <Compile Include="Cheese\Cheese Products\EdamConcreteProduct.cs" />
+    <Compile Include="Meat\Meat Products\ChickenConcreteProduct.cs" />
+    <Compile Include="FoodAbstractFactory.cs" />
+    <Compile Include="Meat\Meat Products\LambConcreteProduct.cs" />
+    <Compile Include="Meat\MeatConcreteFactory.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Tutorial.cs" />
@@ -50,5 +57,6 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
