task/AF-102 - Initial commit for Unit Testing suite

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
 Abstract Factory/.vs/
 Abstract Factory/Abstract Factory/bin/
 Abstract Factory/Abstract Factory/obj/
+Abstract Factory/packages/
+Abstract Factory/Unit Testing/obj/
