--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@ Abstract Factory/Abstract Factory/bin/
 Abstract Factory/Abstract Factory/obj/
 Abstract Factory/packages/
 Abstract Factory/Unit Testing/obj/
+Abstract Factory/Unit Testing/bin/
